web design commit

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>My Website</title>
+        <title>Mine Website</title>
     </head>
     <body>
-        <hl>Hello,World!</hl>
-        <p> CSCI 111 </p>
+        <hl style="color:blue">Hello,World!</hl>
+        <p>hey<br> there <br>how are you <br> 111</p> 
+        <hr>
+        <h2> <strong>I will change my life to the better</strong></h2>
+        <p> <li> have faith</li> <li>trust</li></p>
+        <a href="https://linuxhint.com/difference-between-px-em-percentage-css/"> This page </a>
+        <img src="my_image.jpg" alt="my image"> 
+        
     </body>
 </html>
