--- a/lab3 web design/WPPS_Lab3.html
+++ b/lab3 web design/WPPS_Lab3.html
@@ -34,7 +34,7 @@
       Lab 4 - Designing with CSS 
     </h1>
     <hr class="line">
-    <article id="task">
+    <article id="task" class="col-12">
       <h2 >Task</h2>
       <p>
         <img src="cloud.jpg" alt="" width="735px" height="300" name="clouds">
